namespaces/live.cloud-platform.service.justice.gov.uk/dsaicoe-consult-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "dsaicoe-consult-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "consult-demo"
    cloud-platform.justice.gov.uk/application: "dsaicoe-consult"
    cloud-platform.justice.gov.uk/owner: "Data Science & AI Centre of Excellence: dsai.centreofexcellence@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/consult-demo"
    cloud-platform.justice.gov.uk/team-name: "dsaicoe-consult-team"
    cloud-platform.justice.gov.uk/review-after: ""
